Fix title overlapping logo

--- a/static/Styles/hacker.css
+++ b/static/Styles/hacker.css
@@ -45,7 +45,7 @@ img {
 }
 
 header{
-	max-width: 80%;
+	max-width: 80vw;
 	margin: 0 auto;
 }
 
